Stop layout shift entirely when clicking scales and magic paths

--- a/src/App/Footer/Footer.module.scss
+++ b/src/App/Footer/Footer.module.scss
@@ -5,6 +5,7 @@
     border-width: 5px;
     border-style: solid;
     border-radius: 16px;
+    margin-top: 10px;
 }
 
 .row {
